--- a/web/static/home.html
+++ b/web/static/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Example</title>
+<title>k8sTicket</title>
 <script type="text/javascript">
 window.onload = function () {
     var conn;
