--- a/web/static/home.html
+++ b/web/static/home.html
@@ -18,7 +18,7 @@ window.onload = function () {
 
 
     if (window["WebSocket"]) {
-        conn = new WebSocket("ws://" + document.location.host + document.location.pathname + "/ws");
+        conn = new WebSocket("ws://" + document.location.host + document.location.pathname.replace(/^(.+?)\/*?$/, "$1") + "/ws");
         conn.onclose = function (evt) {
             var item = document.createElement("div");
             item.innerHTML = "<b>Connection closed.</b>";
@@ -39,7 +39,7 @@ window.onload = function () {
                   item.innerText = "Got token: ".concat(messagedata[1]);
                   appendLog(item);
                   messagedata_content = messagedata[1].split("@");
-                  document.cookie = "stoken=".concat(messagedata_content[0], ";path=", document.location.pathname, "/", messagedata_content[1], "/");
+                  document.cookie = "stoken=".concat(messagedata_content[0], ";path=", document.location.pathname.replace(/^(.+?)\/*?$/, "$1"), "/", messagedata_content[1], "/");
                   window.location.href = document.location.pathname + "/".concat(messagedata_content[1], "/")
                   break;
                 }
