--- a/web/static/home.html
+++ b/web/static/home.html
@@ -71,10 +71,8 @@ body {
     margin: 0;
     padding: 0.5em 0.5em 0.5em 0.5em;
     position: absolute;
-    top: 0.5em;
     left: 0.5em;
     right: 0.5em;
-    bottom: 3em;
     overflow: auto;
 }
 
@@ -91,10 +89,74 @@ body {
     width: 100%;
     overflow: hidden;
 }
+   
+/*https://www.w3schools.com/howto/howto_css_responsive_header.asp*/
+/* Style the header with a grey background and some padding */
+.header {
+  overflow: hidden;
+  background-color: #f1f1f1;
+  padding: 20px 10px;
+}
+
+/* Style the header links */
+.header a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 25px;
+  border-radius: 4px;
+}
+
+/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
+.header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+/* Change the background color on mouse-over */
+.header a.button {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Style the active/current link*/
+.header a:hover {
+  background-color: dodgerblue;
+  color: white;
+}
+
+/* Float the link section to the right */
+.header-right {
+  float: right;
+}
+
+/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
+@media screen and (max-width: 500px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .header-right {
+    float: none;
+  }
+}
 
 </style>
 </head>
 <body>
-<div id="log"></div>
+<div class="header">
+  <a href="#default" class="logo">k8sTicket &mdash;	user-based load-balacing</a>
+  <div class="header-right">
+    <a href="https://github.com/ipb-halle/k8sticket" class="button">GitHub Repository</a>
+  </div>
+</div>
+
+<div id="log">
+    <h3>Server Messages</h3>
+</div>
 </body>
 </html>
